<resources>
    <string name="app_name">My Application</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="internet_permission_rationale">"Internet permission is needed for providing data."
    </string>
    <string name="pb_api_secret">"mkfGeOrjGCjQcbsA"</string>

    <string name="pb_api_key">"AvqUUgQaeNkX4s7vDdah0j9tdYxLCs4O"</string>

    <string name="stroke_alpha">Stroke Alpha</string>
    <string name="stroke_hue">Stroke Hue</string>
    <string name="stroke_joint_type">Stroke Joint Type</string>
    <string name="stroke_pattern">Stroke Pattern</string>
    <string name="stroke_width">Stroke Width</string>
    <string name="clickable">Clickable</string>
    <string name="fill_alpha">Fill Alpha</string>
    <string name="fill_hue">Fill Hue</string>
    <string name="properties_circle">Properties for Circle(s)</string>
    <string name="pattern_solid">Solid</string>
    <string name="pattern_dotted">Dotted</string>
    <string name="pattern_dashed">Dashed</string>
    <string name="pattern_mixed">Mixed</string>
    <string name="map_circle_description">Google Map with circles.</string>
</resources>
